(module) fix grid issue with header spacing and ex-grid

--- a/docs/example.css
+++ b/docs/example.css
@@ -1,3 +1,7 @@
+section {
+    max-width: 1000px;
+    margin: 3rem auto;
+}
 .example-container {
     text-align: center;
 }
