--- a/src/global/grid.scss
+++ b/src/global/grid.scss
@@ -20,7 +20,7 @@
         padding: 1rem;
         margin: 0 1rem;
         max-width: $grid-content-width;
-        width: calc(100% - $grid-content-gutter);
+        width: calc(100% - #{$grid-content-gutter});
 
         @include mq('tablet') {
             margin: 0 auto;
